Now has a login layout too

--- a/templates/admin.html.erb
+++ b/templates/admin.html.erb
@@ -21,6 +21,9 @@
 				<li><a href='#'>Type 3</a></li>
 			</ul>
 		</div>
+		<%%= content_tag(:div, "<span>close</span>" + flash[:notice], :class => "flash_notice") if flash[:notice] %>
+		<%%= content_tag(:div, "<span>close</span>" + flash[:error], :class => "flash_error") if flash[:error] %>
+		<%%= content_tag(:div, "<span>close</span>" + flash[:warning], :class => "flash_warning") if flash[:warning] %>
 		<div id='sidebar'>
 			<%%= yield(:sidebar) %>
 		</div>
@@ -32,5 +35,3 @@
 		</div>
 	</body>
 </html>
-
-<!-- Note - double escaped ERBs as fields are being templated in -->
