--- a/templates/admin.css
+++ b/templates/admin.css
@@ -219,6 +219,9 @@ div#content {
 	box-shadow: 5px 5px 5px #888;
 	-moz-box-shadow:5px 5px 5px #888;
 	-webkit-box-shadow: 5px 5px 5px #888;
+	border-radius: 5px; 
+	-moz-border-radius: 5px; 
+	-webkit-border-radius: 5px;
 }
 
 div#content h1 {
@@ -229,6 +232,12 @@ div#content h1 {
 	font-weight: bold;
 	color: black;
 	position: relative;
+	border-radius-topleft: 5px;
+	border-radius-topright: 5px;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-topright: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
 }
 
 div#content h1 span {
@@ -290,7 +299,7 @@ form div.description {
 form div.input {
 	background-color: #f0f0f0;
 	padding: 6px;
-	margin-bottom: 10px;
+	margin-bottom: 20px;
 }
 
 form textarea {
@@ -299,10 +308,6 @@ form textarea {
 
 form input[type='text'] {
 	width: 99%;
-}
-
-form div.actions {
-	margin-top: 20px;
 }
 
 /* ***************** FOOTER ***************** */
