--- a/templates/login.css
+++ b/templates/login.css
@@ -96,6 +96,9 @@ div#login {
 	box-shadow: 5px 5px 5px #888;
 	-moz-box-shadow:5px 5px 5px #888;
 	-webkit-box-shadow: 5px 5px 5px #888;
+	border-radius: 5px; 
+	-moz-border-radius: 5px; 
+	-webkit-border-radius: 5px;
 }
 
 div#login h1 {
@@ -106,6 +109,12 @@ div#login h1 {
 	font-weight: bold;
 	color: black;
 	position: relative;
+	border-radius-topleft: 5px;
+	border-radius-topright: 5px;
+	-moz-border-radius-topleft: 5px;
+	-moz-border-radius-topright: 5px;
+	-webkit-border-top-left-radius: 5px;
+	-webkit-border-top-right-radius: 5px;
 }
 
 /* ***************** FORM ELEMENTS ***************** */
