--- a/templates/admin.css
+++ b/templates/admin.css
@@ -205,7 +205,16 @@ div#header ul#subnavigation li.active a, div#header ul#subnavigation li a:hover 
 div#sidebar {
 	float: right;
 	width: 360px;
-	margin: 20px;
+	margin: 0px 20px 20px 20px;
+}
+
+div#sidebar div.card {
+	background: white;
+	box-shadow: 2px 2px 2px #888;
+	-moz-box-shadow:2px 2px 2px #888;
+	-webkit-box-shadow: 2px 2px 2px #888;
+	margin-top: 20px;
+	padding-bottom: 8px;
 }
 
 div#sidebar h2 {
@@ -213,7 +222,7 @@ div#sidebar h2 {
 	padding: 8px;
 	color: black;
 	font-weight: bold;
-	margin-bottom: 10px;
+	margin-top: 20px;
 }
 
 div#sidebar p {
