Added hue to admin.css (for if you're regenerating), authenticity_token to login form and fix flashes on login error

--- a/templates/admin.css
+++ b/templates/admin.css
@@ -2,6 +2,7 @@
 
 Colours used are:
 
+Hue                : <%= hue %>
 Dark/Header        : <%= dark_colour %>
 Light/Tabs/links   : <%= light_colour %>
 Highlight/Headings : <%= highlight_colour %>
