--- a/templates/admin.css
+++ b/templates/admin.css
@@ -32,6 +32,14 @@ a:hover {
 	text-decoration: underline;
 }
 
+strong {
+	font-weight: bold;
+}
+
+em {
+	font-style: italic;
+}
+
 /* ***************** FLASH DEFINITIONS ***************** */
 
 div.flash_error, div.flash_notice, div.flash_warning {
@@ -271,6 +279,17 @@ div#content h1 span {
 	color: #d0d8eb;
 }
 
+div#content h2 {
+	font-weight: bold;
+	font-size: 120%;
+	color: black;
+	display: inline;
+}
+
+div#content p {
+	margin-bottom: 8px;
+}
+
 div.date_breakout {
 	margin-left: -20px;
 	padding-left: 20px;
@@ -303,11 +322,21 @@ div.summary strong {
 
 /* ***************** FORM ELEMENTS ***************** */
 
-form h2 {
+a.link_to_site  {
+	border: 1px solid #ccc;
+	background-color: #f0f0f0;
+	color: #555;
+	padding: 5px;
+	color: #555;
+	display: block;
+	margin-bottom: 20px;
 	font-weight: bold;
-	font-size: 120%;
-	color: black;
-	display: inline;
+}
+
+a.link_to_site:hover {
+	background-color: #ccc;
+	color: white;
+	text-decoration: none;
 }
 
 form span.error {
