--- a/templates/login.html.erb
+++ b/templates/login.html.erb
@@ -17,7 +17,7 @@
 			<div id='content'>
 				<!-- Extract from here to the yield to a view -->
 				<form action='/login' method='post'>
-					<input type='hidden' name='authenticity_token' value='<%= form_authenticity_token %>' />
+					<input type='hidden' name='authenticity_token' value='<%%= form_authenticity_token %>' />
 					<h2>User name</h2>
 				  <div class='input'>
 				    <input type='text' name='user_name' />
