--- a/lib/generators/andy_admin/templates/admin.html.erb
+++ b/lib/generators/andy_admin/templates/admin.html.erb
@@ -2,7 +2,7 @@
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 	<head>
-		<title><%%= @page_title || "Untitled" %> : <%= admin_name %></title>
+		<title><%%= @page_title || "Untitled" %> : <%= name %></title>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.0/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css">
 		<%%= javascript_include_tag 'admin' %>
@@ -18,7 +18,7 @@
 					<%% end %>
 				</div>
 			<%% end %>
-			<h1><%= admin_name %> <span><%%= @page_title %></h1>
+			<h1><%= name %> <span><%%= @page_title %></h1>
 			<ul id='navigation'>
 				<%% ANDY_ADMIN_MENU.main_items_each(@current_section_id) do |name, link, section_id, css_class| %>
 					<li class='<%%= css_class %>'><a href='<%%= link %>' id='<%%= section_id %>'><%%= name %></a></li>
